# hacks

./: .gitmodules  CNAME  CODE_OF_CONDUCT.md  Dockerfile  README.md  config.toml  index.html  index.xml  sitemap.xml
.github/workflows/: publish.yml  rust.yml
about/: index.html
about-us/: index.html
anti-burl/: Cargo.toml  Dockerfile
anti-burl/src/: app.rs  cli.rs  main.rs
anti-burl/src/app/: req.rs
archives/: index.html
b64d/: Cargo.toml  test.txt
b64d/src/: main.rs
buster/: Cargo.toml  readme.md
buster/src/: main.rs
categories/: index.html  index.xml
check-cnames/: Cargo.toml  README.md
check-cnames/src/: app.rs  cli.rs  main.rs
comb/: Cargo.toml
comb/src/: main.rs
content/: _index.md
content/posts/: demo.md
filter-resolved/: .gitignore  Cargo.toml  README.md
filter-resolved/src/: main.rs
get-title/: .gitignore  Cargo.toml  Dockerfile  README.md
get-title/src/: main.rs
hostping/: main.go
html-comments/: .gitignore  Cargo.toml  README.md
html-comments/src/: main.rs
htmlattribs/: Cargo.toml
htmlattribs/src/: main.rs
httprobe/: Cargo.toml  README.md
httprobe/src/: app.rs  cli.rs  main.rs
httprobe/src/txt/: large.txt  xlarge.txt
kxss/: Cargo.toml  README.md
kxss/src/: app.rs  cli.rs  main.rs
series/: index.html  index.xml
static/: CNAME
tags/: index.html  index.xml
waybackurls/: Cargo.toml  README.md
waybackurls/src/: .main.rs.rustfmt  main.rs
