[package]
name = "b64d"
version = "0.1.0"
edition = "2021"
authors = ["Logan Wemyss"]
description = "Decode a base64 encoded file"
repository = "https://github.com/knassar702/hacks"
license = "GPL-3.0-or-later"
keywords = ["base64"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
base64 = "0.13"
structopt = "0.3"
