[package]
name = "buster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["blocking"] }
rayon = "1.5.3"
clap = { version = "3.2.14", features = ["derive"] }